# cse158-assignment2

./: .gitignore  CSE_Assignment2.html  CSE_Assignment2.ipynb  README.md  baseline.ipynb  improved_baseline.ipynb  pyproject.toml  video_url.txt  word2vec_CNN.py  workbook.html
